FIX min-height overlay + trigger on small height

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -120,6 +120,7 @@ html {
 
           .video-section-overlay {
             height: $video-section-overlay-height;
+            min-height: 55rem;
             width: 100%;
             position: relative;
 
